--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
 theme: jekyll-theme-modernist
 title: Sleuth Card Game Simulator
+description: Project Multi-Agent Systems 2016/2017, University of Groningen
