--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
-theme: jekyll-theme-Dinky
+theme: jekyll-theme-Cayman
 title: Sleuth Card Game Simulator
-description: Multi-Agent Systems 2017, University of Groningen
+description: Multi-Agent Systems Course 2016-2017, University of Groningen
